@@ -8,6 +8,9 @@ Changelog
 4.0b1 - Unreleased
 ------------------
 
+- Add popup for add group form.
+  [smcmahon]
+
 - Pass group title and description through to the editGroups request, to
   ensure the those properties on the groups are updated. Allows the display of
   titles in @@usergroup-groupprefs
